Updates for GA4

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ description: "A Nissan 350z project originally prepped for autocross."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 baseurl: ""
-google_analytics: 'UA-69145-25'
+# google_analytics: 'UA-69145-25'
+google_analytics: 'G-R47BPLNZB6'
 disqus: 
 mailchimp-list: 
 include: ["_pages"]
