updates about page

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: "Project350z.com"
 title: "Project350z.com - Autocrossing a Nissan 350z"
-description: "A Nissan 350z project originally prepped for autocross."
+description: 'This content has all moved to <a href="https://www.autocrossblog.com/">AutocrossBlog.com</a>'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 baseurl: ""
